2022-May-29 Struan Robertson

		* ConditionsManager.cpp, Reaction.cpp, ReactionManager.cpp, MesmerILT.cpp: 
		Initial implementation of excess species concentration definition.

		* ParallelManager.h: Correction for Debug build.

2022-May-22 Struan Robertson

		* Compiler fixes for Linux 64.

		* Baseline update.

2022-May-21 Struan Robertson

		* ConditionsManager.h/.cpp: Further prepartory work for specifying spectator 
		species concentrations as a percentage of total concentration.

		* Baseline update.

		* Documentation update: Inappropriate use of reservoir state removed.

2022-May-15 Struan Robertson

		* ConditionsManager.h/.cpp, Reaction.h/.cpp and derived reaction classes: Initial 
		work toward specifying spectator species concentrations as a percentage of total 
		concentration.

		* Glyoxal_Exchange.xml: Inappropriate use of reservoir state removed.

2022-May-04 Struan Robertson

		* PriorDistFragmentation.cpp: Update of fragmentation distribution output.

2022-May-02 Struan Robertson

		* PseudoIsomerizationReaction.cpp: Corrected to account for Type I potentials.

		* PriorDistFragmentation.cpp: Initial implementation of fragmentation distribution
		output.

2022-April-25 Struan Robertson

		* System.h, main.cpp: Version update.

2022-April-23 Struan Robertson

		* Marquardt.cpp: Removed requirement that all transition matrices should be of the 
		same size during fitting. This requirement was put in place to avoid unnecessary
		re-calculation of the density of states, however this was causing some fitting
		calculations to take an excessive amount of time (particularly low temperature, 
		higher precision instances) and should be unnecessary as density of states re-
		calculation is only triggered when a new upper threshold is detected. The old 
		behaviour can be obtained by setting "me:useTheSameCellNumberForAllConditions".

2022-February-27 Struan Robertson

		* ParallelManager.h, ConditionsManager.cpp, System.h/.cpp: Fixes for sink reaction 